tests/ui/imports/import3.stderr
error[E0432]: unresolved import `main`
  --> $DIR/import3.rs:1:5
   |
LL | use main::bar;
   |     ^^^^ use of unresolved module or unlinked crate `main`
   |
help: you might be missing a crate named `main`, add it to your project and import it in your code
   |
LL + extern crate main;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
