tests/ui/imports/import3.rs
use main::bar; //~ ERROR unresolved import `main`

fn main() { println!("foo"); }
